--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "workspace",
+  "name": "gulprep4",
   "version": "1.0.0",
-  "description": "Ready workspace for frontend for many tasks. JS: clean unnecessary js for bootstrap.js, concatenation all js files into one minified files; css: clean unnecessary css, compilation scss to css, concatenation all css files into one minified files, extracts & inlines critical (above-the-fold) CSS to html; images: image optimization",
-  "license": "ISC",
-  "dependencies": {
-    "browser-sync": "2.18.13",
-    "critical": "0.9.1",
-    "del": "3.0.0",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "4.0.0",
-    "gulp-cache": "1.0.1",
-    "gulp-changed": "3.1.1",
-    "gulp-clean-css": "3.9.0",
-    "gulp-concat": "2.6.1",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "4.0.0",
-    "gulp-purifycss": "0.2.0",
-    "gulp-sass": "3.1.0",
-    "gulp-sourcemaps": "2.6.1",
-    "gulp-uglify": "3.0.0",
-    "gulp-useref": "3.1.5",
-    "gulp-webp": "2.3.0",
-    "imagemin-jpeg-recompress": "5.1.0",
-    "jquery": "3.3.1",
-    "jquery-validation": "^1.19.2",
-    "lazysizes": "3.0.0",
-    "popper.js": "1.14.3",
-    "run-sequence": "2.2.0",
-    "swiper": "4.3.3"
+  "description": "",
+  "main": "index.html",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "browser-sync": "^2.26.12",
+    "del": "^6.0.0",
+    "gifsicle": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-useref": "^4.0.1",
+    "gulp-webp": "^4.0.1",
+    "imagemin": "^7.0.1",
+    "imagemin-jpeg-recompress": "^7.0.0",
+    "jpegtran": "^1.1.0",
+    "optipng": "^2.2.0",
+    "useref": "^1.4.3"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.2",
     "intl-tel-input": "^17.0.6"
   }
 }
